--- a/MidiMaps/css/midiMaps.css
+++ b/MidiMaps/css/midiMaps.css
@@ -1,10 +1,9 @@
 .bg-gradient-primary {
     /* background-color: #4e73df; */
-    background-image: url("img/undraw_posting_photo.svg");
+    /* background-image: url("img/undraw_posting_photo.svg"); */
     /* background-image: url("../img/bg1.jpg"); */
     /* background-position: center; */
-    background-image: linear-gradient(0.33turn, #761381 10.08%, #c22e1e);
-    background-size: contain;
+    /* background-image: linear-gradient(0.33turn, #761381 10.08%, #c22e1e); */
 }
 
 .midi {
@@ -14,7 +13,7 @@
 }
 
 #midiNav {
-    background-image: url("../img/bg1.jpg");    
+    background-image: url("../img/bg1.jpg");
     background-position: center center;
     background-size: cover;
 }
@@ -24,15 +23,15 @@
     /* background-image: url("img/undraw_posting_photo.svg"); */
     background-image: url("../img/bg11v.jpg");
     background-image: url("../img/mapBG1.png");
-    background-image: url("../img/map1.jpg");
     background-image: url("../img/map2.jpg");
     background-image: url("../img/map3.jpg");
-    background-position: top 200px;
+    background-image: url("../img/map1.jpg");
+    /* background-position: top 200px; */
+    background-size: 125%;
+    background-attachment: fixed;
     background-origin: border-box;
     /* background-image: repeating-linear-gradient(rgba(93, 21, 181, 0.93) 8.39%, #af3136 89.92%); */
-    background-size: 90%;
-    background-attachment: fixed;
-overflow: hidden;
+    overflow: hidden;
 }
 
 #placeholder {
@@ -102,7 +101,7 @@ tr>td:hover {
 
     }
 
-    #listing { 
+    #listing {
         height: 24%;
         top: 136px;
     }
