--- a/MidiMaps/css/midiMaps.css
+++ b/MidiMaps/css/midiMaps.css
@@ -41,9 +41,9 @@
     color: chartreuse;
 }
 
-.resFix {
+/* .resFix {
     height: 150px;
-}
+} */
 
 /* tr>td:hover {
     padding-left: 10%;
@@ -83,7 +83,7 @@
         /* margin-bottom:100px ; */
 
         /* overflow: hidden; */
-        /* display: none; */
+        /*  */
     }
 
     select {
@@ -485,6 +485,7 @@
     #info-content {
         overflow: -webkit-paged-y !important;
         height: 0px;
+        /* display: none; */
     }
 
 }
